# erigon

./: .dockerignore  .env  .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .readthedocs.yml  .snyk  .torrent.bolt.db  1.txt  2.txt  AUTHORS  BITFINITY.README.md  BITFINITY_README.md  CHANGELOG.md  CI-GUIDELINES.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  ChangeLog.md  DEV_CHAIN.md  Dockerfile  Dockerfile.all  Dockerfile.alltools  Dockerfile.cloudrun  Dockerfile.debian  Dockerfile.lite  Dockerfile.pq  Dockerfile.release  Dockerfile.rpc  Dockerfile.test  FUNDING.json  MPT_ANALYSIS_ERIGON.md  MPT_ANALYSIS_ERIGON_EXPANDED.md  MPT_REDESIGN_IMPLEMENTATION_PLAN_PROMPT.md  MPT_REDESIGN_PLAN.md  MPT_REDESIGN_REQUIREMENTS_PROMPT.md  (+378 more)
.buildkite/: pipeline.yml
.circleci/: config.yml
.claude/: pr-description-sparse-snapshots.md  settings.json
.codex/: hooks.json
.devcontainer/: devcontainer.json
.gcp/: compose-logs.sh  compose-reinit.sh  config.env  docker-compose.yaml  env-clean-start.sh  env-reset-state.sh  env-update.sh  logs.sh  update.sh  vm-init.sh
.github/: CODEOWNERS  CONTRIBUTING.md  PROPOSAL.md  README.md  TODO  actionlint.yaml  build.yml  dependabot.yml  test-caching  test-kurtosis-assertoor.yml  zizmor.yml
.golangci/: step1.yml  step2.yml  step3.yml  step4.yml
aa/: nodekey
accounts/: accounts.go  accounts_test.go  manager.go  sort.go
aggregator/: aggregator.go  aggregator_test.go  history.go
arb/: tx_timebosted.go
bench/: README.md  bench.sh  config_A.toml  config_B.toml
borfinality/: api.go  bor_verifier.go  whitelist.go  whitelist_helpers.go
bptree/: binary_file.go  bulk.go  bulk_test.go  graph.go  key_factory.go  node.go  tree.go  tree_test.go
chain/: chain_config.go  consensus.go  protocol_param.go
cl/: A.md  CLAUDE.md  \  agents.md  coverage  readme.md
cmd/: commitment-prefix-original.go  lol.sh
cocoon/: cocoon.go  cocoon_test.go  (+2 more)
interfaces/: .gitignore  Cargo.toml  README.md  build.rs  db_tables.toml  turbo-geth.drawio  txpool_control.proto
interfaces/.github/workflows/: rust.yml
interfaces/_docs/: README.md  staged-sync.md
interfaces/consensus_engine/: consensus.proto
interfaces/downloader/: downloader.proto
interfaces/p2psentry/: sentry.proto
interfaces/remote/: db.proto  ethbackend.proto  kv.proto
interfaces/snapshot_downloader/: external_downloader.proto
interfaces/src/: lib.rs
interfaces/starknet/: cairo.proto
interfaces/testing/: testing.proto
interfaces/txpool/: mining.proto  txpool.proto  txpool_control.proto
interfaces/types/: types.proto
interfaces/web3/: common.proto  trace.proto
ntt_local/rust/: Cargo.toml
ntt_local/rust/benches/: ntt_bench.rs
ntt_local/rust/src/: falcon.rs  fast.rs  ffi.rs  field.rs  lib.rs  ntt.rs  precompile.rs
(+28427 files in other folders)
