[package]
name = "ethereum-interfaces"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
license = "Apache-2.0"

[features]
consensus = []
sentry = []
remotekv = []
snapshotsync = []
txpool = []

[dependencies]
arrayref = "0.3"
ethereum-types = { version = "0.11", default-features = false }
prost = "0.7"
tonic = "0.4"

[build-dependencies]
prost-build = "0.7"
tonic-build = "0.4"
