[package]
name = "ethereum-interfaces"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
license = "Apache-2.0"

[features]
consensus = []
sentry = []
remotekv = []
snapshotsync = []
txpool = []
db = ["once_cell", "serde", "toml"]
web3 = []

[dependencies]
arrayref = "0.3"
ethereum-types = { version = "0.13", default-features = false }
ethnum = { version = "1", default-features = false }
once_cell = { version = "1", optional = true }
prost = "0.9"
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "0.5", optional = true }
tonic = "0.6"

[build-dependencies]
prost-build = "0.9"
tonic-build = "0.6"
