[package]
name = "pq-eth-precompiles"
version = "0.1.0"
edition = "2021"
description = "Post-quantum lattice precompiles for Ethereum: NTT, SHAKE256, Falcon-512 verification"
license = "MIT"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
thiserror = "2"
sha3 = "0.10"
keccak = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
pqcrypto-falcon = "0.3"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
sha3 = "0.10"

[[bench]]
name = "ntt_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
